[package]
name = "hyperscale-production"
version.workspace = true
edition.workspace = true
description = "Production runner with async I/O"

[[bin]]
name = "hyperscale-validator"
path = "src/bin/validator.rs"

[[bin]]
name = "hyperscale-keygen"
path = "src/bin/keygen.rs"

[features]
default = []
# Enable cross-node trace context propagation in messages.
# Only useful in testnets/devnets where all nodes are instrumented.
# Disabled by default for mainnet (no cross-node visibility anyway).
trace-propagation = ["hyperscale-messages/trace-propagation"]

[dependencies]
hyperscale-core.workspace = true
hyperscale-dispatch.workspace = true
hyperscale-dispatch-pooled.workspace = true
hyperscale-bft.workspace = true
hyperscale-engine.workspace = true
hyperscale-execution.workspace = true
hyperscale-mempool.workspace = true
hyperscale-metrics.workspace = true
hyperscale-metrics-prometheus.workspace = true
hyperscale-storage.workspace = true
hyperscale-storage-rocksdb.workspace = true
hyperscale-node.workspace = true
hyperscale-provisions.workspace = true
hyperscale-topology.workspace = true
hyperscale-types.workspace = true
hyperscale-messages.workspace = true
hyperscale-network.workspace = true
hyperscale-network-libp2p.workspace = true

# Networking - libp2p (used directly by validator/keygen binaries for Multiaddr/PeerId)
libp2p.workspace = true
libp2p-stream.workspace = true
futures.workspace = true
bytes.workspace = true
async-trait = "0.1"

# UPnP
igd-next = { version = "0.14.3", features = ["aio_tokio"] }

# Serialization
sbor.workspace = true

# Async runtime
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
parking_lot.workspace = true
crossbeam.workspace = true
core_affinity.workspace = true

# Lock-free concurrent data structures
arc-swap.workspace = true
dashmap.workspace = true
quick_cache.workspace = true

# OpenTelemetry for distributed tracing
opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true

# Tracing integration (version matched to opentelemetry 0.31.0)
tracing-opentelemetry.workspace = true

# Tracing subscriber for layer composition
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "registry"] }

# JSON serialization for health check responses
serde.workspace = true
serde_json.workspace = true

# HTTP server for metrics endpoint
axum = "0.8.7"

# CLI and configuration (for validator binary)
clap.workspace = true
toml.workspace = true
anyhow = "1.0"
hex.workspace = true
rand.workspace = true

# Radix types for genesis configuration parsing
radix-common.workspace = true

# Cryptographic primitives for deterministic PeerId derivation
sha2 = "0.10"
ed25519-dalek.workspace = true
tracing-appender = "0.2.4"

[dev-dependencies]
hyperscale-dispatch-sync.workspace = true
tempfile.workspace = true
serial_test = "3"
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tower = "0.5"

[lints]
workspace = true
