[package]
name = "hyperscale-production"
version.workspace = true
edition.workspace = true
description = "Production runner with async I/O"

[[bin]]
name = "hyperscale-validator"
path = "src/bin/validator.rs"

[[bin]]
name = "hyperscale-keygen"
path = "src/bin/keygen.rs"

[features]
# Run the portable scenario suite at the 5-minute production epoch for parity
# with a real deployment. Off by default so the slow real-QUIC scenarios are a
# nightly/manual job rather than part of `cargo test`.
ci = []

[dependencies]
hyperscale-beacon.workspace = true
hyperscale-core.workspace = true
hyperscale-dispatch.workspace = true
hyperscale-dispatch-pooled.workspace = true
hyperscale-shard.workspace = true
hyperscale-engine.workspace = true
hyperscale-execution.workspace = true
hyperscale-mempool.workspace = true
hyperscale-metrics.workspace = true
hyperscale-metrics-prometheus.workspace = true
hyperscale-storage.workspace = true
hyperscale-storage-rocksdb.workspace = true
hyperscale-node.workspace = true
hyperscale-provisions.workspace = true
hyperscale-types.workspace = true
hyperscale-network.workspace = true
hyperscale-network-libp2p.workspace = true

# Networking - libp2p (used directly by validator/keygen binaries for Multiaddr/PeerId)
libp2p.workspace = true

# UPnP
igd-next = { version = "0.17.1", features = ["aio_tokio"] }

# Serialization
sbor.workspace = true

# Async runtime
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
crossbeam.workspace = true
core_affinity.workspace = true

# Lock-free concurrent data structures
arc-swap.workspace = true
quick_cache.workspace = true

# OpenTelemetry for distributed tracing
opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true

# Tracing integration (version matched to opentelemetry 0.31.0)
tracing-opentelemetry.workspace = true

# Tracing subscriber for layer composition
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "registry"] }

# JSON serialization for health check responses
serde.workspace = true
serde_json.workspace = true

# HTTP server for metrics endpoint
axum = "0.8.9"

# CLI and configuration (for validator binary)
clap.workspace = true
toml.workspace = true
anyhow = "1.0.103"
hex.workspace = true
rand.workspace = true

# Radix types for genesis configuration parsing
radix-common.workspace = true
tracing-appender = "0.2.5"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.7.0", features = ["background_threads", "unprefixed_malloc_on_supported_platforms"] }

[dev-dependencies]
hyperscale-dispatch-sync.workspace = true
hyperscale-metrics.workspace = true
hyperscale-metrics-memory.workspace = true
hyperscale-network-libp2p = { workspace = true, features = ["test-utils"] }
hyperscale-scenarios.workspace = true
hyperscale-storage = { workspace = true, features = ["test-utils"] }
hyperscale-storage-memory.workspace = true
hyperscale-types = { workspace = true, features = ["test-utils"] }
radix-transactions.workspace = true
tempfile.workspace = true
serial_test = "3.5.0"
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tower = "0.5.3"

[lints]
workspace = true
