[package]
name = "hyperscale-provisions"
version.workspace = true
edition.workspace = true
description = "Centralized provision coordination for cross-shard transactions"

[dependencies]
hyperscale-core.workspace = true
hyperscale-types.workspace = true

serde.workspace = true
tracing.workspace = true

[dev-dependencies]
hyperscale-test-helpers.workspace = true
proptest.workspace = true

[lints]
workspace = true
