[package]
name = "hyperscale-remote-headers"
version.workspace = true
edition.workspace = true
description = "Centralized remote block header coordination for cross-shard verification"

[dependencies]
hyperscale-core.workspace = true
hyperscale-types.workspace = true

tracing.workspace = true

[dev-dependencies]
hyperscale-types = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
