[package]
name = "hyperscale-simulation"
version.workspace = true
edition.workspace = true
description = "Simulation runner"

[dependencies]
hyperscale-core.workspace = true
hyperscale-shard.workspace = true
hyperscale-engine.workspace = true
hyperscale-execution.workspace = true
hyperscale-mempool.workspace = true
hyperscale-network-memory.workspace = true
hyperscale-node.workspace = true
hyperscale-provisions.workspace = true
hyperscale-storage.workspace = true
hyperscale-storage-memory.workspace = true
hyperscale-topology.workspace = true
hyperscale-types.workspace = true
hyperscale-dispatch-sync.workspace = true

# Radix dependencies for real execution
radix-common.workspace = true

arc-swap.workspace = true
crossbeam.workspace = true
tracing.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[dev-dependencies]

# Radix dependencies for e2e tests
radix-transactions.workspace = true

# Re-import types crate with the test-utils feature so tests can share
# `test_validity_range()` rather than redefining it per test file.
hyperscale-types = { workspace = true, features = ["test-utils"] }

hyperscale-metrics.workspace = true
hyperscale-metrics-memory.workspace = true

tracing-test.workspace = true

[lints]
workspace = true
