[package]
name = "hyperscale-simulation"
version.workspace = true
edition.workspace = true
description = "Simulation runner"

[features]
# Run the sims at the production 5-minute beacon epoch. Off by default so
# local runs use a fast 30s epoch; CI turns it on for production parity.
ci = []

[dependencies]
hyperscale-beacon.workspace = true
hyperscale-core.workspace = true
hyperscale-shard.workspace = true
hyperscale-engine.workspace = true
hyperscale-execution.workspace = true
hyperscale-mempool.workspace = true
hyperscale-network.workspace = true
hyperscale-network-memory.workspace = true
hyperscale-node.workspace = true
hyperscale-provisions.workspace = true
hyperscale-storage.workspace = true
hyperscale-storage-memory.workspace = true
hyperscale-types.workspace = true
hyperscale-dispatch-sync.workspace = true

# Radix dependencies for real execution
radix-common.workspace = true
radix-transactions.workspace = true

arc-swap.workspace = true
crossbeam.workspace = true
tracing.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[dev-dependencies]

# Re-import types crate with the test-utils feature so tests can share
# `test_validity_range()` rather than redefining it per test file.
hyperscale-types = { workspace = true, features = ["test-utils"] }

hyperscale-metrics.workspace = true
hyperscale-metrics-memory.workspace = true
hyperscale-scenarios.workspace = true

tracing-test.workspace = true

[lints]
workspace = true
