[package]
name = "hyperscale-state-tree"
version.workspace = true
edition.workspace = true
description = "Verkle-based state tree with 3-tier entity/partition/substate structure"

[dependencies]
ark-ed-on-bls12-381-bandersnatch.workspace = true
ark-ec.workspace = true
ark-serialize.workspace = true
blake3.workspace = true
dashmap.workspace = true
hyperscale-types.workspace = true
jellyfish-verkle-tree.workspace = true
radix-common.workspace = true
radix-substate-store-interface.workspace = true
sbor.workspace = true
