[package]
name = "hyperscale-storage-memory"
version.workspace = true
edition.workspace = true
description = "In-memory storage implementation for simulation"

[dependencies]
hyperscale-storage.workspace = true
hyperscale-types.workspace = true
hyperscale-dispatch.workspace = true
im.workspace = true
tracing.workspace = true

[dev-dependencies]
hyperscale-dispatch-sync.workspace = true
hyperscale-storage = { workspace = true, features = ["test-utils"] }
hyperscale-types = { workspace = true, features = ["test-utils"] }
