[package]
name = "hyperscale-storage"
version.workspace = true
edition.workspace = true
description = "Storage traits, verkle state tree, and shared types"

[dependencies]
# Internal crates
hyperscale-types.workspace = true

# JVT (Jellyfish Verkle Tree)
jellyfish-verkle-tree.workspace = true

# Cryptography (for proof serialization and commitment conversion)
ark-ed-on-bls12-381-bandersnatch.workspace = true
ark-serialize.workspace = true

# Hashing
blake3.workspace = true

# Parallelism
rayon.workspace = true

# Radix dependencies (for SubstateDatabase, DatabaseUpdates, etc.)
radix-common.workspace = true
radix-substate-store-interface.workspace = true

# Key encoding
indexmap.workspace = true

[features]
test-utils = []

[dev-dependencies]
hyperscale-dispatch-sync.workspace = true
